...
    <string name="app_name">Preloved App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="content_login">Welcome to PreLoved App, Please Login Before Use Application.</string>
    <string name="no_have_account">Didn`t Have Account? <b><font color='#EE839F'>Register</font></b></string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="sell">Sell</string>
    <string name="sale">Sale</string>
    <string name="account">Account</string>
    <string name="search_hint">Search your preloved.....</string>
...
